2004-07-01  Todd Berman  <tberman@off.net>

	* CodeCompletion/CompletionWindow.cs: Fix bug #61020, by marking the
	completion window a transient for the main window.

2004-07-01  Todd Berman  <tberman@off.net>

	* CodeCompletion/CompletionWindow.cs: Sigh, this was an evil bug
	to let slip, this will work far far better though. Now the completion
	gui should go away properly.

2004-06-29  Todd Berman  <tberman@off.net>

	* Gui/SourceEditorDisplayBinding.cs: Removing that patch for now,
	that was half-cooked.

2004-06-28  Todd Berman  <tberman@off.net>

	* Gui/SourceEditorDisplayBinding.cs: Add a FSW to monitor for external
	changes to a loaded file.

2004-06-26  Lluis Sanchez Gual  <lluis@ximian.com>

	* Search/SearchReplaceManager.cs: Make sure the search starts at the current
	  cursor position.
	  
	* Search/SearchReplaceUtilities.cs: Added IsWholeWordAt() method, to be
	  reused from all search strategies.
	  
	* Search/SearchResult/ISearchResult.cs,
	  Search/SearchResult/DefaultSearchResult.cs: Removed unused 
	  CreateDocument(). The documentInformation now returns and interface: 
	  IDocumentInformation.
	  
	* Search/SearchStrategy/KMPSearchStrategy.cs,
	  Search/SearchStrategy/WildcardSearchStrategy.cs,
	  Search/SearchStrategy/RegExSearchStrategy.cs:
	  Removed SourceEditorBuffer dependency. Everything is done through the 
	  text iterator.
	  
	* Search/SearchStrategy/BruteForceSearchStrategy.cs: Implemented a more 
	  efficient search algorithm.
	  
	* Search/DocumentIterator/IDocumentInformation.cs: New interface that
	  represents a file to be searched. The SourceEditorBuffer dependency has
	  been removed so the file don't need to be loaded.
	  
	* Search/DocumentIterator/CurrentDocumentIterator.cs,
	  Search/DocumentIterator/AllOpenDocumentIterator.cs: Current property
	  now returns a EditorDocumentInformation instance.
	  
	* Search/DocumentIterator/EditorDocumentInformation.cs: New File. Document 
	  information for a file opened in the editor.